example fully functional

--- a/aws-examples/s3-webcache-example/src/main/webapp/test.html
+++ b/aws-examples/s3-webcache-example/src/main/webapp/test.html
@@ -1,8 +1,11 @@
 <html>
 <head>
 	<title>test</title>
+	<link rel="stylesheet" href="layout/layout.css" type="text/css">
 </head>
 <body>
-	<img src="grails_logo.jpg"></img>
+	<script type="text/javascript" src="scripts/javascript.js"></script>
+	<img src="imageAtRoot.jpg"></img>
+	<img src="images/image.jpg"></img>
 </body>
 </html>
